# mlflow-women-clothing

./: pyproject.toml
mlflow_women_clothing/: mlflow.db  nb_test.ipynb  trainModels.ipynb
mlflow_women_clothing/TextPreProcessing/: preProcessing.py
mlflow_women_clothing/artifacts/1/1800b3dabe2f41389b9851c54f4f0876/artifacts/NaiveBayes/: MLmodel  conda.yaml  model.pkl
mlflow_women_clothing/artifacts/1/598aed5420b441e59531d2b39b281c35/artifacts/svm/: MLmodel  model.pkl
mlflow_women_clothing/artifacts/1/7df17ebcdb2749eab45b80ee0036a6a0/artifacts/xgboost/: MLmodel  model.pkl
tests/: test_mlflow_women_clothing.py
