[tool.poetry]
name = "mlflow_women_clothing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
spacy = "^3.0.6"
xgboost = "^1.4.2"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
ipykernel = "^5.5.5"
jupyter = "^1.0.0"
notebook = "^6.4.0"
typeguard = "^2.12.0"
mlflow = "^1.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
